# dask-scipy

./: .coveragerc  .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: tests.yaml
ci/: environment-3.10.yaml  environment-3.8.yaml  environment-3.9.yaml
ci/scripts/: install.sh  run_tests.sh
dask_scipy/: __init__.py
dask_scipy/integrate/: __init__.py  _quadrature.py
docs/: dask_scipy.integrate.rst  dask_scipy.rst  modules.rst  tests.rst  tests.test_integrate.rst
docs/source/: conf.py  index.rst
tests/test_integrate/: test_quadrature.py
