[project]
name = "dask_scipy"
version = "0.0.1"
description = "Distributed and parallel Scipy using Dask Array"
authors = [{name = "Mrinal Kanti Sardar", email = "mrinal.k.sardar@gmail.com"}]
readme = "README.rst"
python = "^3.8"
homepage = "https://github.com/mrinalsardar/dask-scipy"
repository = "https://github.com/mrinalsardar/dask-scipy"
documentation = "https://github.com/mrinalsardar/dask-scipy"
classifiers = [
    "Development Status :: 1 Dev/Unstable",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "dask[distributed,array]"
]
[dev-dependencies]
black = { version = "^22.3.0", python = "^3.8" }
flake8 = { version = "^3.9.2", python = "^3.8"}
isort = { version = "^5.10.1", python = "^3.8"}

# Pip lower than 21.3 requires you to define a setup.py/setup.cfg
# A shim with setup.py will suffice for that.
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

